# AWSInfoGraphic

./: .env.example  .gitignore  1.0.1  README.md  __init__.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_end_to_end_placeholder.py  test_pipeline.py  test_puppet_connectivity.py  test_task_9_validation.py
agents/: __init__.py  content_analyzer.py  design_layout.py  image_composer.py  image_sourcer.py  layout_agent.py  text_formatter.py
deployment/: README.md
deployment/cdk/: app.py  cdk.json  requirements.txt
deployment/cloudformation/: infographic-generator.yaml
deployment/docker/: Dockerfile  (+1 more)
docs/: api_reference.md  architecture.md  architecture_diagram.md  design_document.md  developer_guide.md  troubleshooting.md
examples/: advanced_usage.py  basic_usage.py  sample_outputs.md  usage_guide.py
images/: README.md
scripts/: import_check.py  import_web_app.py  run_demo.py  run_demo_request.py  test_agent.py  test_import_web_app.py
tests/: README.md  __init__.py  test_content_analysis.py
tools/: __init__.py  bedrock_tools.py  composition_tools.py  content_analysis_tools.py  content_tools.py  image_composition_tools.py  image_processing_tools.py  image_s3_tools.py  image_sourcing_tools.py  image_tools.py  image_validation_tools.py  import_test.py  layout_design_tools.py  layout_tools.py  nova_canvas_tools.py  s3_tools.py  text_formatting_tools.py  text_tools.py
utils/: __init__.py  config.py  constants.py  error_handling.py  monitoring.py  platform_validator.py  test_helpers.py  types.py  validation.py
web/: README.md  app.py
(+14 files in other folders)
